--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
@@ -16,6 +17,7 @@
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.2",
     "@types/react": "17.0.37",
     "@types/spotify-web-api-node": "^5.0.4",
